# e-commerce-inventory-management-system

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/api/: deps.py
app/api/v1/: api.py
app/api/v1/endpoints/: category.py  product.py
app/core/: config.py
app/crud/: __init__.py  category.py  product.py
app/db/: base.py  session.py
app/models/: __init__.py  category.py  product.py
app/schemas/: __init__.py  category.py  product.py
tests/: conftest.py  test_categories.py  test_products.py
